fix: fix gapping in whole page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -559,7 +559,7 @@ intro .carousel-container {
  }
 
  .about .single-do {
-   padding: 30px 0;
+   padding: 10px 0;
  }
 
  .about .single-do.active {
